welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:13: error: not found: value cpt
        	cpt+=1  
                ^Diagonal:17: error: not found: value cpt
        		cpt+=1
                        ^